--- a/CSAdmin/CSAdmin.vbproj
+++ b/CSAdmin/CSAdmin.vbproj
@@ -18,6 +18,7 @@
     <OptionStrict>Off</OptionStrict>
     <OptionInfer>On</OptionInfer>
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -33,7 +34,6 @@
     <PublisherName>Crecer Sanos</PublisherName>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -92,6 +92,7 @@
       <DependentUpon>Main.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Modulos\Funciones.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -107,6 +108,42 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Pantallas\Asistencia.Designer.vb">
+      <DependentUpon>Asistencia.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Pantallas\Asistencia.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\Certificados.Designer.vb">
+      <DependentUpon>Certificados.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Pantallas\Certificados.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\Consultas.Designer.vb">
+      <DependentUpon>Consultas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Pantallas\Consultas.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\Contratos.Designer.vb">
+      <DependentUpon>Contratos.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Pantallas\Contratos.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\Equipos.Designer.vb">
+      <DependentUpon>Equipos.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Pantallas\Equipos.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\Personal.Designer.vb">
+      <DependentUpon>Personal.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Pantallas\Personal.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Main.resx">
@@ -117,6 +154,30 @@
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\Asistencia.resx">
+      <DependentUpon>Asistencia.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\Certificados.resx">
+      <DependentUpon>Certificados.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\Consultas.resx">
+      <DependentUpon>Consultas.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\Contratos.resx">
+      <DependentUpon>Contratos.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\Equipos.resx">
+      <DependentUpon>Equipos.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\Personal.resx">
+      <DependentUpon>Personal.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
@@ -153,6 +214,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Clases\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
