--- a/CSAdmin/CSAdmin.vbproj
+++ b/CSAdmin/CSAdmin.vbproj
@@ -100,6 +100,8 @@
     <Compile Include="AcercaDe.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Clases\SampleIIdentity.vb" />
+    <Compile Include="Clases\SampleIPrincipal.vb" />
     <Compile Include="CSAdminBDDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -279,9 +281,6 @@
     <Content Include="CSAdminBD.sdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Clases\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
