--- a/CSAdmin/CSAdmin.vbproj
+++ b/CSAdmin/CSAdmin.vbproj
@@ -99,6 +99,7 @@
     <Compile Include="AcercaDe.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Clases\PartialClasses.vb" />
     <Compile Include="Clases\SampleIIdentity.vb" />
     <Compile Include="Clases\SampleIPrincipal.vb" />
     <Compile Include="LoginForm.Designer.vb">
