Datagrids de pantalla Admin
Datagrids de pantalla Admin usando EntityFrameworkWinForms dll.

--- a/CSAdmin/CSAdmin.vbproj
+++ b/CSAdmin/CSAdmin.vbproj
@@ -67,6 +67,10 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EFWinForms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\EFWinForms.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
