--- a/CSAdminApp/CSAdminApp.csproj
+++ b/CSAdminApp/CSAdminApp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="AcercaDe.Designer.cs">
       <DependentUpon>AcercaDe.cs</DependentUpon>
     </Compile>
+    <Compile Include="Clases\FunmPC.cs" />
     <Compile Include="Clases\PartialClasses.cs" />
     <Compile Include="Clases\SampleIIdentity.cs" />
     <Compile Include="Clases\SampleIPrincipal.cs" />
