--- a/CSAdminApp/CSAdminApp.csproj
+++ b/CSAdminApp/CSAdminApp.csproj
@@ -99,6 +99,12 @@
     <Compile Include="Pantallas\pPersonal.Designer.cs">
       <DependentUpon>pPersonal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pantallas\telPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Pantallas\telPopUp.Designer.cs">
+      <DependentUpon>telPopUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AcercaDe.resx">
@@ -112,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Pantallas\pPersonal.resx">
       <DependentUpon>pPersonal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\telPopUp.resx">
+      <DependentUpon>telPopUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
