Pantalla Admin / EEWinForms

--- a/CSAdminApp/CSAdminApp.csproj
+++ b/CSAdminApp/CSAdminApp.csproj
@@ -49,6 +49,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EFWinforms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
@@ -93,6 +94,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ModelBD.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Pantallas\pAdmin.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\pAdmin.Designer.cs">
+      <DependentUpon>pAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pantallas\pEquipos.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -121,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\pAdmin.resx">
+      <DependentUpon>pAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pantallas\pEquipos.resx">
       <DependentUpon>pEquipos.cs</DependentUpon>
