--- a/CSAdminApp/CSAdminApp.csproj
+++ b/CSAdminApp/CSAdminApp.csproj
@@ -100,6 +100,12 @@
     <Compile Include="Pantallas\pAdmin.Designer.cs">
       <DependentUpon>pAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pantallas\pContratos.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pantallas\pContratos.Designer.cs">
+      <DependentUpon>pContratos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pantallas\pEquipos.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -131,6 +137,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Pantallas\pAdmin.resx">
       <DependentUpon>pAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantallas\pContratos.resx">
+      <DependentUpon>pContratos.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Pantallas\pEquipos.resx">
       <DependentUpon>pEquipos.cs</DependentUpon>
